# survivor-ml

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  refresh-data.yml
app/: index.html  package-lock.json  package.json  vite.config.js
app/public/data/seasons/: index.json  season_1.json  season_10.json  season_11.json  season_12.json  season_13.json  season_14.json  season_15.json  season_16.json  season_17.json  season_18.json  season_19.json  season_2.json  season_20.json  season_21.json  season_22.json  season_23.json  season_24.json  season_25.json  season_26.json  season_27.json  season_28.json  season_29.json  season_3.json  season_30.json  season_31.json  season_32.json  season_33.json  season_34.json  season_35.json  season_36.json  season_37.json  season_38.json  season_39.json  season_4.json  season_40.json  season_41.json  season_42.json  season_43.json  season_44.json  (+11 more)
app/src/: main.js  style.css
content/: explore.ipynb  run_model.ipynb
src/: analysis.py  evaluate.py  export.py  load.py
src/features/: build.py
src/models/: elimination.py  utils.py  win.py
tests/: test_build.py
