[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "survivor-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
]
